Add social icons

--- a/index.html
+++ b/index.html
@@ -41,13 +41,24 @@
         <h1>Chris Pickett</h1>
         <p class="major">A software engineer living in Portland, OR.
 </p>
-        
+        <p><div class="inner">
+    <ul class="icons">
+        <li><a target="_blank" href="https://github.com/bunchesofdonald" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
+        <li><a target="_blank" href="https://twitter.com/chrispickett" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a target="_blank" href="https://www.linkedin.com/in/chris-pickett-101ab214/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+        <li><a target="_blank" href="mailto:chris@pickett.xyz" class="fav icon style2 fa-envelope"><span class="label">Email</span></a></li>
+    </ul>
+</div>
+</p>
         
     </div>
     <div class="image">
         <img src="images/me.jpg" alt="Hugo Story" />
     </div>
 </section>
+	
+	
+	
 	
 
 
