Add social icons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
     <div class="content">
         <h1>Chris Pickett</h1>
-        <p class="major">A software engineer living in Portland, OR.
+        <p class="major">A software engineer living in Portland, OR, with a focus on Django/Python.
 </p>
         <p><div class="inner">
     <ul class="icons">
